# pacmod_interface

./: .pre-commit-config.yaml  README.md  build_depends.repos
.github/: sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml
pacmod_interface/: CMakeLists.txt  README.md  package.xml
pacmod_interface/config/: pacmod.param.yaml  pacmod_brake_calibration.xml  pacmod_diag_publisher.param.yaml  pacmod_steer_calibration.xml  pacmod_steer_test.param.yaml  vehicle_info.param.yaml
pacmod_interface/include/pacmod_interface/: pacmod_diag_publisher.hpp  pacmod_interface.hpp
pacmod_interface/include/pacmod_steer_test/: pacmod_steer_test.hpp
pacmod_interface/include/vehicle_info_util/: vehicle_info.hpp
pacmod_interface/launch/: pacmod_interface.launch.xml  pacmod_steer_test.launch.xml
pacmod_interface/src/pacmod_interface/: pacmod_diag_publisher.cpp  pacmod_interface.cpp
pacmod_interface/src/pacmod_steer_test/: pacmod_steer_test.cpp  pacmod_steer_test_node.cpp
pacmod_interface/src/vehicle_info_util/: vehicle_info.cpp
vehicle_msgs/: CMakeLists.txt  package.xml
vehicle_msgs/msg/: ActuationStatusStamped.msg  ShiftStamped.msg
